// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clickable should render - 0 value 1`] = `
<Fragment>
  None
</Fragment>
`;

exports[`Clickable should render - no data 1`] = `
<Fragment>
  <a
    href="http://localhost:5000//undefined"
    onClick={[Function]}
  />
</Fragment>
`;

exports[`Clickable should render 1`] = `
<Fragment>
  <a
    href="http://localhost:5000//some-target"
    onClick={[Function]}
  >
    15
  </a>
</Fragment>
`;

exports[`Loading card render - isLoading: false 1`] = `
<Component
  hasGutter={true}
>
  <Component>
    <Component>
      <Component
        component="h1"
      >
        Card that is loaded
      </Component>
    </Component>
  </Component>
  <Component
    isFilled={true}
  >
    <Component>
      <Component
        component="dl"
      />
    </Component>
  </Component>
</Component>
`;

exports[`Loading card render - isLoading: true 1`] = `
<Component
  hasGutter={true}
>
  <Component>
    <Component>
      <Component
        component="h1"
      >
        Card that is loading
      </Component>
    </Component>
  </Component>
  <Component
    isFilled={true}
  >
    <Component>
      <Component
        component="dl"
      />
    </Component>
  </Component>
</Component>
`;

exports[`Loading card render 1`] = `
<Component
  hasGutter={true}
>
  <Component>
    <Component>
      <Component
        component="h1"
      >
        Some title
      </Component>
    </Component>
  </Component>
  <Component
    isFilled={true}
  >
    <Component>
      <Component
        component="dl"
      >
        <Component
          component="dt"
        >
          test-title
        </Component>
        <Component
          component="dd"
        >
          <Clickable
            item={
              Object {
                "onClick": [MockFunction],
                "size": "md",
                "title": "test-title",
                "value": "some value",
              }
            }
          />
        </Component>
        <Component
          component="dt"
        >
          just title
        </Component>
        <Component
          component="dd"
        >
          Not available
        </Component>
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`should render loading bars 1`] = `
<Component
  hasGutter={true}
>
  <Component>
    <Component>
      <Component
        component="h1"
      >
        Some title
      </Component>
    </Component>
  </Component>
  <Component
    isFilled={true}
  >
    <Component>
      <Component
        component="dl"
      >
        <Component
          component="dt"
        >
          test-title
        </Component>
        <Component
          component="dd"
        >
          <Skeleton
            isDark={false}
            size="md"
          />
        </Component>
        <Component
          component="dt"
        >
          just title
        </Component>
        <Component
          component="dd"
        >
          <Skeleton
            isDark={false}
            size="sm"
          />
        </Component>
      </Component>
    </Component>
  </Component>
</Component>
`;
